Cabal-Version:      3.4
Name:               repro
Version:            0.1.0

Author:             Merijn Verstraaten
Maintainer:         Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:          Copyright © 2023 Merijn Verstraaten

License:            BSD-3-Clause
License-File:       LICENSE

Category:           Testing
Build-Type:         Simple

Synopsis:           Reproducer

Description:
    Minimal reproducer of sublibrary solver issue.

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -fno-warn-unused-do-bind

  Exposed-Modules:      Repro

  Build-Depends:        base >= 4.9 && < 5

Library conduit
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -fno-warn-unused-do-bind

  Exposed-Modules:      Repro.Conduit

  Build-Depends:        base >= 4.9 && < 5
               ,        conduit ^>= 1.3.5

